add director field

--- a/src/assets/scss/modules/_card.scss
+++ b/src/assets/scss/modules/_card.scss
@@ -22,6 +22,10 @@
     line-height: 1.5;
     margin-left: $spacing-4;
 
+    span {
+      display: block;
+    }
+
     .title {
       @include font-size(20px);
 
